--- a/WC.YouthLearning/Views/Home/Index.cshtml
+++ b/WC.YouthLearning/Views/Home/Index.cshtml
@@ -79,7 +79,7 @@
                         </div>
                         <div class="col-xl-3 col-lg-6 col-3">
                             <img src="\images\通知公告.png" class="figure-img img-fluid rounded" alt="...">
-                            <figcaption class="figure-caption ">重置文件</figcaption>
+                            <a href="/UploadImage/DeleteAll"> <figcaption class="figure-caption ">重置文件</figcaption></a>
                         </div>
                         <figure class="col-xl-3 col-lg-6 col-3">
                             <img src="\images\邮件邮箱.png" class="figure-img img-fluid rounded" alt="...">
