--- a/WC.YouthLearning/Views/Home/Show.cshtml
+++ b/WC.YouthLearning/Views/Home/Show.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Show";
 }
     <div class="text-center">
-        <a href="/Home/Index" class="btn btn-primary">返回首页</a>
+        <a href="/Home/Index" class="btn btn-primary mt-2">返回首页</a>
         <h2>这里是 @Model.name 的空间</h2>
         <p>学号：@Model.sid</p>
         <p>提交时间： @Model.time</p>
         @{string a = Model.name + ".jpg";}
-        <p><img src="../../StudentImage/@a"></p>
+        <p><img class="img-fluid" src="../../StudentImage/@a"></p>
         <a  href="/Home/Reset/@Model.id" class="btn btn-primary del" style="display:none">重置他的截图</a>
         <a href="/Home/Vip/@Model.id" class="btn btn-primary vip" style="display:none">给他设置会员</a>
     </div>
