--- a/WC.YouthLearning/Views/Shared/_Layout.cshtml
+++ b/WC.YouthLearning/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
         }
     </style>
 </head>
-<body class="" style="        height: 1800px;
+<body class="pt-5" style="height: 1200px;
         background-color: #F6F6F6;overflow-x:hidden
 ">
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm " style=" position: fixed;top: 0;width:100%;z-index:1">
         <a class="navbar-brand" href="#"><strong id="tit">江西服装学院软件1班</strong></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +78,7 @@
         </div>
         <form class="form-inline my-2 my-lg-0 d-none d-lg-block">
             <input class="form-control mr-sm-2" type="search" placeholder="学生学号" aria-label="学生学号">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜索学生</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">搜索学生</button>
         </form>
     </nav>
     @RenderBody()
