--- a/WC.YouthLearning/Views/Home/Index.cshtml
+++ b/WC.YouthLearning/Views/Home/Index.cshtml
@@ -19,17 +19,21 @@
                 <div>
                     <h4><strong><em>5.0V</em>开始</strong></h4>
 
-                    <form method="post" action="/UploadImage/Index" enctype="multipart/form-data">
+                    <form class="p-2" method="post" action="/UploadImage/Index" enctype="multipart/form-data">
 
-                        <div class="p-2">
-                            <p>第一步： <input type="text" class="form-control" name="name" id="name" placeholder="请输入你的姓名" /></p>
-                        </div>
-                        <div class="p-2">
-                            <p>第二步：  <label class="btn btn-primary" for="uploadFile">选择图片</label></p>
+                      
+                            @*<p>第一步： <input type="text" class="form-control" name="name" id="name" placeholder="请输入你的姓名" /></p>*@
+                           
+                                <div>
+                                    <label class="form-inline">第一步：<input type="text" name="name" id="name" placeholder="请输入你的姓名" class="form-control" /></label>
+                                </div>
+                  
+                        <div>
+                            <p>第二步：<label class="btn btn-primary" for="uploadFile">选择图片</label></p>
                             <input style="display: none;" type="file" id="uploadFile" class="clip" accept="image/*">
                             <div id="imgUploadX"></div>
                         </div>
-                        <div class="p-2">
+                        <div >
                             <p>第三步：<input class="btn btn-primary" type="submit" value="确认提交" /></p>
                         </div>
                     </form>
