--- a/WC.YouthLearning/Views/Shared/_Layout.cshtml
+++ b/WC.YouthLearning/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
-    <title>截图上传系统</title>
+    <title>青年大学习管理系统</title>
     <link href="~/css/bootstrap.css" rel="stylesheet" />
     <script src="~/js/jquery-3.3.1.js"></script>
     <script src="~/js/bootstrap.js"></script>
@@ -26,7 +26,7 @@
         background-color: #F6F6F6;overflow-x:hidden
 ">
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm " style=" position: fixed;top: 0;width:100%;z-index:1">
-        <a class="navbar-brand" href="#"><strong id="tit">江西服装学院软件1班</strong></a>
+        <a class="navbar-brand" href="/Home/Index"><img src="~/favicon.ico" width="30" height="30"/><strong id="tit">江西服装学院软件1班</strong></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,10 +35,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">主页 <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/Home/Index">主页 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">仓库</a>
+                    <a class="nav-link" href="/Home/Index">仓库</a>
                 </li>
                 <li class="nav-item outlogin">
                     <a class="nav-link" href="/Home/OutLogin">注销登入</a>
@@ -78,7 +78,7 @@
         </div>
         <form class="form-inline my-2 my-lg-0 d-none d-lg-block">
             <input class="form-control mr-sm-2" type="search" placeholder="学生学号" aria-label="学生学号">
-            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">搜索学生</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">搜索</button>
         </form>
     </nav>
     @RenderBody()
