--- a/WC.YouthLearning/Views/Shared/_Layout.cshtml
+++ b/WC.YouthLearning/Views/Shared/_Layout.cshtml
@@ -85,17 +85,15 @@
 
 
     @RenderSection("Scripts", required: false)
-    <footer class="col text-center" style="color:darkgray">
-        <hr />
-        <a> 大数据学院 &nbsp;</a> 
-        <a>&copy; 2020 - 饭桶爱大米 &nbsp;</a>
-        <a style="color:darkgray" href="http://www.beian.miit.gov.cn/">赣ICP备20007874号</a> <br />
-        <a style="color:darkgray" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36012102000233">
-            <img src="D:\Download\备案图标.png" />
-            赣公网安备 36012102000233号
-        </a>
-        <br />
-        <a>友情链接：</a><a style="color:darkgray" href="http://yicraftcore.com/">意界</a>
-    </footer>
+<footer class="col text-center" style="color:darkgray">
+    <hr />
+    <a> 大数据学院 &nbsp;</a>
+    <a>&copy; 2020 - WC &nbsp;</a>
+    <a style="color:darkgray" href="http://www.beian.miit.gov.cn/">赣ICP备20007874号</a> <br />
+    <a style="color:darkgray" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36012102000233"><img src="~/images/备案图标.png" />赣公网安备 36012102000233号 </a>
+    <br />
+    <a>友情链接：</a><a style="color:darkgray" href="https://yicraftcore.com/">CC</a>/
+    <a>友情链接：</a><a style="color:darkgray" href="https://funto.top/">funto</a>
+</footer>
 </body>
 </html>
